Actualizaciones: - Se agregaron tests para PasswordTokensTable and se resolvieron varios bugs en el proceso - Se agregaron tests UsersController en especial para la funcion reset. Solo necesita tests con email verdaderos

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 
     },
     "require-dev": {
-        "phpunit/phpunit": "*"
+        "phpunit/phpunit": "*",
+        "php-mock/php-mock": "*"
     },
     "autoload": {
         "psr-4": {
