--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 
     },
     "require-dev": {
-        "phpunit/phpunit": "*",
+        "phpunit/phpunit": "<6.0",
         "php-mock/php-mock": "*"
     },
     "autoload": {
