--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,8 @@
     "type": "cakephp-plugin",
     "require": {
         "php": ">=5.4.16",
-        "cakephp/cakephp": "~3.0",
+        "cakephp/cakephp": "3.5.*",
         "admad/cakephp-jwt-auth": "^2.0"
-
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7|^6.0",
