--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "accionadev/users",
+    "name": "oidacra/users-cakephp",
     "description": "Acciona Solutions Plugin - Provides user administration and access list control",
     "type": "cakephp-plugin",
     "require": {
